# ChukutoInventory

./: .gitignore  CMakeLists.txt  README.md
src/: Programa.hpp  actualizar.cpp  buscar.cpp  crear.cpp  eliminar.cpp  listar.cpp  main.cpp
src/clases/: Bien.cpp  Bien.hpp  Interfaz.cpp  Interfaz.hpp
